--- a/summary.html
+++ b/summary.html
@@ -268,7 +268,7 @@ a:hover {
 					  <div class="card-body blueish">
 						<h5 class="card-title">Undergraduate</h5>
 						<h6 class="card-subtitle mb-2 text-success">the basics</h6>
-						<p class="card-text">What I studied for years ago</p>
+						<p class="card-text">What I studied years ago</p>
 						<a href="#undergrad" class="btn btn-primary">More...</a>
 					  </div>
 					  <p class="secondary" style="margin-bottom: -20px;"> . </p>
