Added padding to some contact icons to resize them/make sizes appear same. Modified mail bg red to pinkish.

--- a/summary.html
+++ b/summary.html
@@ -441,19 +441,19 @@ a:hover {
 		<div class="d-flex justify-content-center">
 			<div class="contacts boxy d-inline-flex mb-3">
 				<div class="d-flex justify-content-center">
-					<div onmouseover="this.style.background='#f00';" onmouseout="this.style.background='';">
+					<div onmouseover="this.style.background='#d22';" onmouseout="this.style.background='';">
 						<a class="social" href="mailto:jasonmwatu@gmail.com">
-							<img src="./files/icons/email-black.svg" width="48" height="48" alt="mail">
+							<img src="./files/icons/email-black.svg" style="padding: 5px;" width="48" height="48" alt="mail">
 						</a>
 					</div>
 					<div onmouseover="this.style.background='#0a0';" onmouseout="this.style.background='';">
 						<a class="social" href="tel:+254721946371">
-							<img src="./files/icons/call-black.svg" width="48" height="48" alt="phone">
+							<img src="./files/icons/call-black.svg" style="padding: 7px;" width="48" height="48" alt="phone">
 						</a>
 					</div>
 					<div onmouseover="this.style.background='#0077b5';" onmouseout="this.style.background='';">
 						<a class="social" href="https://www.linkedin.com/in/jason-mwatu-080a9873" rel="noopener noreferrer" target="_blank">
-							<img src="./files/icons/linkedin.svg" width="48" height="48" alt="linkedin">
+							<img src="./files/icons/linkedin.svg" style="padding: 7px;" width="48" height="48" alt="linkedin">
 						</a>
 					</div>
 					<div onmouseover="this.style.background='#fff';" onmouseout="this.style.background='';">
@@ -468,12 +468,12 @@ a:hover {
 					</div>
 					<div onmouseover="this.style.background='#e65100';" onmouseout="this.style.background='';">
 						<a class="social" href="https://www.instagram.com/karizma_mwenyewe/" rel="noopener noreferrer" target="_blank">
-							<img src="./files/icons/instagram2.svg" width="48" height="48" alt="instagram">
+							<img src="./files/icons/instagram2.svg" style="padding: 5px;" width="48" height="48" alt="instagram">
 						</a>
 					</div>
 					<div onmouseover="this.style.background='#4267b2';" onmouseout="this.style.background='';">
 						<a class="social" href="https://www.facebook.com/djkarisma/" rel="noopener noreferrer" target="_blank">
-							<img src="./files/icons/facebook2.svg" width="48" height="48" alt="facebook">
+							<img src="./files/icons/facebook2.svg" style="padding: 3px;" width="48" height="48" alt="facebook">
 						</a>
 					</div>
 					<div onmouseover="this.style.background='#1da1f2';" onmouseout="this.style.background='';">
