--- a/summary.html
+++ b/summary.html
@@ -251,7 +251,7 @@ a:hover {
 					  <ul class="list-group list-group-flush">
 						<li class="list-group-item blueish"><h6>Address:</h6>   Nairobi</li>
 						<li class="list-group-item blueish"><h6>Birthday:</h6>   8th December</li>
-						<li class="list-group-item blueish"><h6>Siblings:</h6>   Two</li>
+						<li class="list-group-item blueish"><h6>Siblings:</h6>   Three</li>
 					  </ul>
 					</div>
 				</div>
