--- a/contacts.html
+++ b/contacts.html
@@ -187,7 +187,7 @@ a:hover {
 		  <div class="d-flex justify-content-center mt-5 mb-3">
 			<h2 class="title mr-2 font-weight-bold">Find Me </h2>
 			<div class="align-self-center">
-				<img class="mr-2 mb-2" src="./files/icons/contacts.svg" style="margin-right: 4px;" width="32" height="32" alt="contacts">
+				<img class="mr-2 mb-2" src="./files/icons/contacts.svg" style="margin-top: 5px; margin-right: 4px;" width="32" height="32" alt="contacts">
 			</div>
 		  </div>
 		  
